<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:background="#fff"
    android:orientation="vertical" >

   	<LinearLayout 
   	    android:baselineAligned="false"
   	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
    	
   	    <LinearLayout 
	   	    android:baselineAligned="false"
	   	    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" >
   	    
	   	    <TextView 
			    android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5dp"
		    	android:text="@string/conta_data_vencimento" />
		
			<TextView android:id="@+id/conta_vencimento_alert"
			    android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5dp"
		    	android:textStyle="bold"
		    	android:text="@string/conta_vencimento_fake" />
		
		</LinearLayout>
		
   	    <LinearLayout 
	   	    android:baselineAligned="false"
	   	    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" >
		
  	        	<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_margin="5dp"
			    android:text="@string/conta_data_pagamento" />
		
			<TextView android:id="@+id/conta_pagamento_alert"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_margin="5dp"
			    android:text="@string/conta_pagamento_fake"
			    android:textStyle="bold" />
		</LinearLayout>
		
   	    <LinearLayout 
	   	    android:baselineAligned="false"
	   	    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" >
   	    
	   	    <TextView 
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5dp"
		    	android:text="@string/conta_situacao" />
		
			<TextView android:id="@+id/conta_situacao_alert"
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5dp"
		    	android:textStyle="bold"
		    	android:text="@string/conta_situacao_fake" />
		
		</LinearLayout>
   	    
   	</LinearLayout>
    
	<TextView 
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_margin="5dp"
    	android:text="@string/conta_descricao" />
	
	<TextView android:id="@+id/conta_descricao_alert"
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_margin="5dp"
    	android:textStyle="bold"
    	android:text="@string/conta_descricao_fake" />
	
	<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:baselineAligned="false"
		    android:orientation="vertical" >
	    
		    <TextView 
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5dp"
		    	android:text="@string/conta_valor" />
			
			<TextView android:id="@+id/conta_valor_alert"
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5dp"
		    	android:textStyle="bold"    	
		    	android:text="@string/conta_valor_fake" />
			
		</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:baselineAligned="false"
	    android:background="@layout/screen_border"
	    android:orientation="horizontal" >
   	    
   	    <ImageButton android:id="@+id/conta_baixar"
   	        android:contentDescription="@string/conta_down"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:src="@drawable/download"
	    	android:layout_margin="5dp"/>
   	    
   	    <ImageButton android:id="@+id/conta_estornar"
   	        android:contentDescription="@string/conta_up"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:src="@drawable/up"
	    	android:layout_margin="5dp" />
   	    
   	    <ImageButton android:id="@+id/conta_editar"
   	        android:contentDescription="@string/conta_edit"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:src="@drawable/calculator"
	    	android:layout_margin="5dp" />
   	    
   	    <ImageButton android:id="@+id/conta_incluir"
   	        android:contentDescription="@string/conta_insert_from"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:src="@drawable/calculator_add"
	    	android:layout_margin="5dp"/>
   	    
   	     <ImageButton android:id="@+id/conta_excluir"
   	        android:contentDescription="@string/conta_delete"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:src="@drawable/calculator_remove"
	    	android:layout_margin="5dp"/>
	
	</LinearLayout>

</LinearLayout>