<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/contas_opcoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/contas_aberto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:checked="true"
            android:text="@string/contas_aberto" />

        <RadioButton
            android:id="@+id/contas_paga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/contas_paga" />

        <RadioButton
            android:id="@+id/contas_todas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/contas_todas" />
    </RadioGroup>
    
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	   	android:layout_gravity="center_vertical|center_horizontal"
	    android:orientation="vertical" >           
	    
	    <TextView
	        android:id="@+id/contas_param_datas"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/contas_param_data_entre_fake" />
	    
	</LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>