<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:background="@layout/screen_border"
    android:baselineAligned="false"
    android:longClickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/vencimento_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:text="@string/conta_vencimento_fake"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pagamento_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/conta_pagamento_fake"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/valor_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/conta_valor_fake"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/descricao_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="horizontal"
            android:text="@string/conta_descricao_fake"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>